dev/k8s/istio/search-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: search-allow-selected-services
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: search
      app.kubernetes.io/instance: search
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas/sa/storefront-bff
              - cluster.local/ns/yas/sa/backoffice-bff
              - cluster.local/ns/yas/sa/product
              # ingress-nginx can duoc phep de api.yas.local.com/search hoat dong
              # (xem README muc 3.1). Kiem tra ten SA: kubectl get sa -n ingress-nginx
              - cluster.local/ns/ingress-nginx/sa/ingress-nginx
      to:
        - operation:
            ports:
              - "80"
    - to:
        - operation:
            ports:
              - "8090"
